feat:添加数据库dao层

--- a/conf.ini
+++ b/conf.ini
@@ -1,19 +1,25 @@
 [http]
 ;web端口 默认为8080
-port=8000
+port = 8000
 ;多核配置 0为根据系统内核配置
-numCPU=0
+numCPU = 0
 ;gin 运行模式，debug  test release 生产环境建议release
-DebugModel=debug
+DebugModel = debug
 ;网关入口路径 默认为api ;分布式部署此配置项在控制台服务设置为空
-GwEntrance=api
+GwEntrance = api
 ;控制台入口 默认admin 非分布式部署和网关入口区分开 ;分布式部署此配置项在网关服务设置为空
-ConEntrance=admin
+ConEntrance = admin
 
+;数据库配置
 [db]
 ;DB.SetMaxOpenConns(1)
 ;DB.SetMaxIdleConns(0)
-;最大空闲连接池
-MaxIdleConns=10
+;最大空闲连接池 仅做后台管理服务，不需要设置过大
+MaxIdleConns = 10
 ;最大连接池
-MaxOpenConns=100
+MaxOpenConns = 100
+Host = 127.0.0.1
+Port = 3306
+UserName = root
+PassWord = 123456
+Database = go-gateway
