--- a/conf.ini
+++ b/conf.ini
@@ -9,17 +9,22 @@ DebugModel = debug
 GwEntrance = api
 ;控制台入口 默认admin 非分布式部署和网关入口区分开 ;分布式部署此配置项在网关服务设置为空
 ConEntrance = admin
+;访问日志目录
+logPath = 
+;最大保存时间(默认15天) 按天切割日志
+logMaxAge = 15
 
 ;数据库配置
 [db]
 ;DB.SetMaxOpenConns(1)
 ;DB.SetMaxIdleConns(0)
 ;最大空闲连接池 仅做后台管理服务，不需要设置过大
-MaxIdleConns = 10
+MaxIdleConns = 5
 ;最大连接池
-MaxOpenConns = 100
+MaxOpenConns = 50
 Host = 127.0.0.1
 Port = 3306
 UserName = root
 PassWord = 123456
 Database = go-gateway
+TablePrefix = gg
